@@ -17,8 +17,8 @@
 #include "String.h"
 #include "List.h"
 
-#define DIR_SEPARATOR '/'
-#define DIR_SEPARATOR_STR "/"
+#define E_DIR_SEPARATOR '/'
+#define E_DIR_SEPARATOR_STR "/"
 
 EDELIB_NS_BEGIN
 
@@ -47,36 +47,19 @@ EDELIB_API bool dir_writeable(const char* name);
 EDELIB_API bool dir_create(const char* name, int perm = 0777);
 
 /**
+ * Creates directory if does not exists and create intermedaite parents
+ * if needed too.
+ *
+ * Return true if succeded or false if failed.
+ */
+EDELIB_API bool dir_create_with_parents(const char* name, int perm = 0777);
+
+/**
  * Remove given path (must be directory) calling system's rmdir().
  * Directory <b>must</b> be empty or operation will fail.
  * Return true if succeded or false if failed.
  */
 EDELIB_API bool dir_remove(const char* name);
-
-/**
- * Remove given path recursively (must be a directory). If parameter <em>all</em>
- * is set to true (default is true), it will remove all files and directories under
- * <em>name</em> parameter (including given <em>name</em>). If set to true, only
- * files will be removed, leaving directory structure intact.
- *
- * Parameter <em>progress</em> is function externaly defined, which can be used to
- * track file/directory deletition. Can be used like:
- * \code
- *   void myprogress(const char* name) {
- *      printf("deleting %s\n", name);
- *   }
- *
- *   dir_remove_rec(some_path, true, myprogress)
- * \endcode
- *
- * If function fails to delete underlaying directories/files, it will call on_fail() given
- * function (otherwise will skip them).
- * 
- * \note Not implemented yet
- */
-EDELIB_API bool dir_remove_rec(const char* name, bool all = true, 
-		void (*progress)(const char* name) = NULL, 
-		void (*on_fail)(const char* name) = NULL);
 
 /**
  * Rename given directory name. If name to be renamed to exists (file, directory, link and etc.)
